[tool.poetry]
name = "mbe_reversing_solutions"
version = "0.1.0"
description = "Solutions for the Modern Binary Exploitation Reversing Challenge"
authors = ["Sam (eremus) <sam@eremus.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pwntools = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
